# gbridge-bridge

./: .gitignore  Cargo.toml  Dockerfile  build_bundle.sh  docker-compose.yml
config/: config.toml.example
src/: main.rs  secrets.example.rs
