[package]
name = "gbridge-bridge"
version = "0.7.0"
authors = ["Pascal Hartig <phartig@rdrei.net>"]
edition = "2018"

[dependencies]
failure = "0.1.8"
toml = "0.5.6"
serde = { version = "1.0.115", features = ["derive"] }
log = "0.4.11"
pretty_env_logger = "0.4.0"
statsd = "^0.14.0"
sentry = { version = "^0.20.0", default-features = false, features = ["log", "env_logger", "failure", "reqwest"] }
ring = "^0.16.15"
rumqttc = "^0.0.7"
reqwest = { version = "^0.10.8", default-features = false, features = ["rustls-tls"] }
